tests/models/struct/unnamed/u128/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    u128
);
fn main() {}
